tests/print/missing_argument.out
[31merror[error]: Expect expression.
----- Traceback -----
  ┌─ <unknown>:2:0
  | print
2 | 
  | ^
[0m